Update Icon Colors

--- a/test/index.html
+++ b/test/index.html
@@ -7,7 +7,7 @@
     <title>AlgoChat | React Algorithm Chat</title>    
     <link href="algochat.css" type="text/css" rel="stylesheet"/>
     <link href="app.css" type="text/css" rel="stylesheet"/>
-     
+    <link rel="icon" type="image/icon" href="/favicon.ico">
   </head>
 
   <body>
