--- a/test/index.html
+++ b/test/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    
+    <script src='https://meet.jit.si/external_api.js'></script>
+
     <title>AlgoChat | React Algorithm Chat</title>    
     <link href="algochat.css" type="text/css" rel="stylesheet"/>
     <link href="app.css" type="text/css" rel="stylesheet"/>
